#23 adjusted styling on landing page so there isn't overlap with the footer. Added sign up button hover darkening. Fixed nav bar links showing blue instead of staying white on landing page and the site top nav.

--- a/EHRApplication/EHRApplication/wwwroot/css/landing.css
+++ b/EHRApplication/EHRApplication/wwwroot/css/landing.css
@@ -23,6 +23,7 @@
 
     .nav-link:hover {
         transform: translateY(1px);
+        color: white;
     }
 
 #landingHeaderContainer {
@@ -31,4 +32,8 @@
 
 .btn:hover{
     transform: translateY(1px);
+}
+
+#sign-up-btn:hover {
+    filter: brightness(.94);
 }
