--- a/EHRApplication/EHRApplication/wwwroot/css/site.css
+++ b/EHRApplication/EHRApplication/wwwroot/css/site.css
@@ -15,6 +15,7 @@ body {
 
     .nav-link:hover, #srchBtn:hover {
         transform: translateY(1px);
+        color: white;
     }
 
 
